; ModuleID = '/home/carl/AnghaBench/linux/drivers/mmc/host/extr_cqhci.c_get_desc.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/mmc/host/extr_cqhci.c_get_desc.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.cqhci_host = type { i32*, i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32* (%struct.cqhci_host*, i32)* @get_desc to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32* @get_desc(%struct.cqhci_host* %0, i32 %1) #0 {
  %3 = alloca %struct.cqhci_host*, align 8
  %4 = alloca i32, align 4
  store %struct.cqhci_host* %0, %struct.cqhci_host** %3, align 8
  store i32 %1, i32* %4, align 4
  %5 = load %struct.cqhci_host*, %struct.cqhci_host** %3, align 8
  %6 = getelementptr inbounds %struct.cqhci_host, %struct.cqhci_host* %5, i32 0, i32 0
  %7 = load i32*, i32** %6, align 8
  %8 = load i32, i32* %4, align 4
  %9 = load %struct.cqhci_host*, %struct.cqhci_host** %3, align 8
  %10 = getelementptr inbounds %struct.cqhci_host, %struct.cqhci_host* %9, i32 0, i32 1
  %11 = load i32, i32* %10, align 8
  %12 = mul nsw i32 %8, %11
  %13 = sext i32 %12 to i64
  %14 = getelementptr inbounds i32, i32* %7, i64 %13
  ret i32* %14
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
